@@ -24,18 +24,11 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
-    testImplementation 'org.pitest:pitest-junit5-plugin:1.0.0' // Add PITest JUnit 5 plugin
-    implementation 'org.apache.commons:commons-lang3:3.11'
-    implementation 'org.mockito:mockito-core:3.7.7'
-    testImplementation 'org.seleniumhq.selenium:selenium-java:4.29.0'
-    testImplementation platform('org.junit:junit-bom:5.10.0')
-    testImplementation group: 'org.slf4j', name: 'slf4j-simple', version: '2.0.17'
-    implementation group: 'com.codeborne', name: 'selenide', version: '7.7.3'
-    testImplementation 'io.rest-assured:rest-assured:5.3.0'
-    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.0'
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    testImplementation 'org.assertj:assertj-swing:3.17.1'
+    testImplementation 'org.assertj:assertj-swing-junit:3.17.1'
+    testImplementation 'junit:junit:4.13.2'
+    testRuntimeOnly 'org.junit.vintage:junit-vintage-engine:5.9.2'
+    testImplementation 'org.mockito:mockito-core:4.+'
 }
 
 jacocoTestReport {
@@ -54,6 +47,8 @@ jacoco {
 test {
     useJUnitPlatform()
     finalizedBy jacocoTestReport
+    systemProperty "java.awt.headless", "false"
+    jvmArgs '--add-opens', 'java.base/java.util=ALL-UNNAMED'
 }
 
 
